[package]
name = "itunes-com"
version = "0.1.5"
edition = "2021"
authors = ["daladim"]
description = "Bindings over iTunes COM API"
repository = "https://github.com/daladim/itunes-com"
documentation = "https://docs.rs/itunes_com"
license = "MIT"
readme = "README.md"
keywords = ["iTunes", "API", "COM", "windows"]
categories = ["api-bindings", "database", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Include safe wrappers
wrappers = ["widestring", "paste", "num_enum"]
# Make it possible to convert enums to and from their numeric equivalents
num_enum = ["num-derive", "num-traits"]


[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "implement",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_Media_Multimedia",
] }

widestring = { version = "1.0", optional = true }
paste = { version = "1.0", optional = true }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }

[package.metadata.docs.rs]
features = ["wrappers", "num_enum"]
default-target = "x86_64-pc-windows-msvc"
targets = []
